# on-chain

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  Structure.md  coverage.sh  current_toolchain  readme.md  scheme
.github/workflows/: BPF.yml  CI.yml  coverage.yml  formatting.yml  tests.yml
client/: Cargo.toml
client/src/: main.rs
crud/: Architecture.md  Cargo.toml  README.md
data-types/: Cargo.toml
data-types/generator/: Cargo.toml
data-types/generator/src/: lib.rs
data-types/generator/tests/: functional.rs
data-types/src/: container.rs  game.rs  game_state.rs  instruction_rom.rs  lib.rs  object.rs  object_type.rs  object_type_rom.rs  player.rs  state.rs  vmcommand.rs  word.rs
data-types/src/db/: column.rs  error.rs  mod.rs  query.rs  schema.rs  schema_id.rs
data-types/src/db/messages/: db_manager.rs  mod.rs  schemas_manager.rs
db/: Cargo.toml
db-manager/: Cargo.toml
db-manager/src/: db_error.rs  db_manager.rs  entrypoint.rs  lib.rs  messages.rs  processor.rs  schemas_error.rs  schemas_manager.rs
db-manager/src/schemas_manager/: error.rs
db-manager/tests/: integration.rs  primary_key.rs  schemas_manager.rs
db-program/: Cargo.toml
db-program/db-cli/: Cargo.toml
db-program/db-cli/src/: main.rs
db-program/src/: bootstrap.rs  entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
db-program/src/bootstrap/: global_state.rs
db-program/tests/: db-program.rs  integration.rs
db/fuzz/: Cargo.toml
db/fuzz/fuzz_targets/: db.rs
db/generator/: Cargo.toml
db/generator/src/: lib.rs
db/generator/tests/: db_impl_generator.rs  functional.rs
db/generator/tests/cases/: 01-correct_use.rs
db/src/: account_fs.rs  column.rs  data.rs  error.rs  index.rs  lib.rs  params.rs  tests.rs
db/src/account_fs/: account_allocator.rs  allocation_table.rs  data_allocator.rs  inode.rs  mod.rs
db/src/account_fs/account_allocator/: allocation_table.rs  inode.rs  mod.rs  tests.rs
db/src/account_fs/data_allocator/: tests.rs
db/src/db_structs/: column.rs  enums.rs  index.rs  mod.rs
db/src/raw/: column.rs  column_id.rs  enums.rs  index.rs  mod.rs
db/src/types/: mod.rs
db/tests/: db.rs
db/tests/fs_images/: clean_fs  prepared_db
engine/: Cargo.toml  README.md
experiments/hasher/: Cargo.toml
experiments/hasher/src/: lib.rs
experiments/hasher/tests/: hasher.rs
fs/: Cargo.toml
fs/fs_test/: Cargo.toml
fs/fs_test/src/: lib.rs
fs/fuzz/: Cargo.toml
fs/fuzz/fuzz_targets/: fs.rs
fs/src/: fs_allocator.rs  fs_dispatcher.rs  lib.rs  segment_id.rs
fs/src/account_allocator/: allocation_table.rs  inode.rs  mod.rs  tests.rs
fs/src/data_allocator/: mod.rs  tests.rs
fs/tests/: fs.rs  integration.rs
fs/tests/fs_images/: used_fs
game/: Cargo.toml  README.md
game/src/: bundled.rs  container.rs  entrypoint.rs  error.rs  game.rs  game_state.rs  instruction.rs  lib.rs  player.rs  processor.rs  state.rs  tests.rs
game/src/game/: add_items.rs  new.rs  tests.rs
game/src/player/: new.rs  tests.rs
game/src/state/: container.rs  game.rs  game_state.rs  mod.rs  player.rs  state.rs
game/src/state/game/: add_items.rs  new.rs
game/src/state/player/: new.rs
game/tests/: add_player.rs  game.rs  integration.rs
object/: Cargo.toml  README.md
project/: Cargo.toml  README.md
projects/example-helloworld-playground/: .gitignore  package-lock.json
projects/example-helloworld-playground/src/client/: hello_world.ts  main.ts
projects/example-helloworld-playground/src/program-rust/: Cargo.toml
projects/example-helloworld-playground/src/program-rust/src/: lib.rs
projects/mech/: package-lock.json  package.json
projects/mech/src/program-rust/: Cargo.toml
projects/mech/src/program-rust/src/: action.rs  brick.rs  condition.rs  error.rs  fight.rs  instruction.rs  lib.rs  processor.rs  unit.rs  value.rs
projects/solana-escrow/: Cargo.toml
projects/solana-escrow/src/: instruction.rs  processor.rs  state.rs
reltab/: Cargo.toml
reltab/src/: lib.rs  one_to_one.rs
schemas-manager/: Cargo.toml
schemas-manager/src/: lib.rs  messages.rs  processor.rs  schemas_manager.rs
schemas-manager/tests/: integration.rs
slice-btree/: Cargo.toml
slice-btree/src/: lib.rs
slice-rbtree/: Cargo.toml  README.md
slice-rbtree/benches/: compare.rs
slice-rbtree/src/: RBTree.rs  forest.rs  header.rs  lib.rs  node.rs  tests.rs  tree.rs
slice-rbtree/src/forest/: header.rs  node.rs  tests.rs
slice-rbtree/src/tree/: tests.rs
src/: action.rs  board.rs  brick.rs  card.rs  condition.rs  entrypoint.rs  error.rs  fight.rs  fight_log.rs  instruction.rs  instruction_rom.rs  lib.rs  nnotes  player.rs  processor.rs  rand.rs  rom.rs  ruleset.rs  unit.rs  unit_action.rs  value.rs  vm.rs  vmcommand.rs  word.rs
src/board/: memory_region.rs  player_board.rs  verification_board.rs
src/vm/: enums.rs  error.rs  log.rs  memory.rs  tests.rs
src/vm/memory/: slice_u8_vec.rs  tests.rs
state/: Cargo.toml
state/src/: lib.rs
storage/: Cargo.toml  README.md
template/: Cargo.toml  README.md
template/src/: lib.rs
tests/: functional.rs
vm/: Cargo.toml  README.md  coverage.sh
vm/src/: board.rs  instruction.rs  lib.rs  nnotes  vm.rs  vmcommand.rs
vm/src/on_chain_types/: game_state.rs  instruction_rom.rs  mod.rs  object.rs  object_type.rs  object_type_rom.rs  vmcommand.rs  word.rs
vm/src/vm/: enums.rs  log.rs  memory.rs
