
[package]
name = "solcery"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
#solana-program = "=1.6.6"
#borsh = "0.7.1"
#thiserror = "1.0.24"
#serde = { version = "1.0", features = ["derive"]  }
tinyvec = {version = "1.3.1", features = ["rustc_1_40"]}

[dev-dependencies]
pretty_assertions = "0.6.1"
#solana-program-test = "=1.6.6"
#solana-sdk = "=1.6.6"

[lib]
name = "solcery"
crate-type = ["cdylib", "lib"]
