[package]
name = "solcery"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
#borsh = "0.7.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"]  }
solana-program = "1.8.2"
thiserror = "1.0.24"
#tinyvec = {version = "1.3.1", features = ["rustc_1_40", "serde"]}

[dev-dependencies]
pretty_assertions = "0.6.1"
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
test-case = "1.2.0"

[lib]
name = "solcery"
crate-type = ["cdylib", "lib"]
