[workspace]
members = [
	"data-types",
	"data-types/generator",
	"db",
	"db-manager",
	"db-program",
	"fs",
	"fs/fs_test",
	"game",
	"reltab",
	"slice-rbtree",
	"vm",
]

[workspace.package]
version = "0.0.0"
license = "Apache-2.0"
homepage = "https://solcery.xyz/"
edition = "2021"

[workspace.dependencies]
borsh = "0.9.2"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
getrandom = { version = "0.2.2", features = ["custom"] }
pretty_assertions = "1.3.0"
solana-program = "1.11.0"
solana-program-test = "1.11.0"
solana-sdk = "1.11.0"
spl-token = {version="3.3.0", features = ["no-entrypoint"]}
