[package]
name = "client"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = ['derive','min_const_generics'] }
solana-client = "1.7.8"
solana-program = "1.7.8"
solana-sdk = "1.7.8"
solcery-db = { path = "../db" }
solcery-db-program = { path = "../db-program", features = ["no-entrypoint"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

