[package]
name = "client"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = ['derive','min_const_generics'] }
clap = "2.33.0"
serde = "1.0.0"
serde_json = "1.0.0"
shellexpand = "2.1"
solana-client = "1.7.8"
solana-program = "1.7.8"
solana-sdk = "1.7.8"
solcery-db = { path = "../db" }
solcery-db-program = { path = "../db-program" }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

