[package]
name = "solcery-data-types"
version = "0.0.0"
license = "Apache-2.0"
homepage = "https://solcery.xyz/"
edition = "2021"

[dependencies]
account-fs = { path = "../fs" }
borsh = "0.9.1"
bytemuck = "1.7.2"
num_enum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
slice-rbtree = { path = "../slice-rbtree" }
solana-program = "1.8.2"
solcery-impl-generator = { path = "generator" }
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "0.6.1"
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
test-case = "1.2.0"
