[package]
name = "solcery-data-types"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
account-fs = { path = "../fs" }
borsh.workspace = true
bytemuck.workspace = true
num_enum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
slice-rbtree = { path = "../slice-rbtree" }
solana-program.workspace = true
solcery-impl-generator = { path = "generator" }
solcery-reltab = { path = "../reltab" }
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
test-case = "1.2.0"
