[package]
name = "solcery-db-program"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
account-fs = { path = "../fs" }
borsh = "0.9.1"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
getrandom = { version = "0.2.2", features = ["custom"] }
solana-program = "1.7.8"
solcery-db = { path = "../db" }
spl-token = {version="3.3.0", features = ["no-entrypoint"]}

[dev-dependencies]
pretty_assertions = "0.6.1"
solana-program-test = "1.11.0"
solana-sdk = "1.7.8"

[lib]
name = "solcery_db_program"
crate-type = ["cdylib", "lib"]
