[package]
name = "solcery-db-program"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
account-fs = { path = "../fs" }
borsh.workspace = true
bytemuck.workspace = true
getrandom.workspace = true
solana-program.workspace = true
solcery-db = { path = "../db" }
spl-token.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[lib]
name = "solcery_db_program"
crate-type = ["cdylib", "lib"]
