[package]
name = "solcery-db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-fs = { path = "../fs" }
borsh = "0.9.1"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
getrandom = { version = "0.2.2", features = ["custom"] }
num-derive = "0.3"
num-traits = "0.2"
slice-rbtree = { path = "../slice-rbtree" }
solana-program = "1.7.8"
solcery-data-types = { path = "../data-types" }
tinyvec = "1.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "solcery_db"
crate-type = ["cdylib", "lib"]
