[package]
name = "solcery-db"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-fs = { path = "../fs" }
borsh.workspace = true
bytemuck.workspace = true
getrandom.workspace = true
num-derive = "0.3"
num-traits = "0.2"
slice-rbtree = { path = "../slice-rbtree" }
solcery-reltab = { path = "../reltab" }
solana-program.workspace = true
solcery-data-types = { path = "../data-types" }
tinyvec = "1.0.0"

[dev-dependencies]
pretty_assertions.workspace = true
fs_test = { path = "../fs/fs_test" }
