[package]
name = "solcery-db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-fs = { path = "../fs" }
borsh = "0.9.2"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
num_enum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
slice-rbtree = { path = "../slice-rbtree", version = "0.1.0-alpha" }
solana-program = "1.8.2"
solcery-impl-generator = { path = "generator" }
solcery-reltab = { path = "../reltab" }
tinyvec = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
fs_test = { path = "../fs/fs_test" }
