[package]
name = "account-fs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
solana-program = "1.7.8"
tinyvec = "1.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
