[package]
name = "account-fs"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
solana-program.workspace = true
tinyvec = "1.0.0"

[dev-dependencies]
pretty_assertions.workspace = true
fs_test = { path = "./fs_test" }
