[package]
name = "account-fs"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = ['derive','min_const_generics'] }
solana-program = "1.7.8"
tinyvec = "1.0.0"

[dev-dependencies]
fs_test = { path = "./fs_test" }
pretty_assertions = "1.3.0"
