[package]
name = "solcery-game"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
no-entrypoint = []

[dependencies]
borsh.workspace = true
getrandom.workspace = true
solana-program.workspace = true
solcery-data-types = { path = "../data-types" }
spl-token.workspace = true
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[lib]
name = "solcery_game"
crate-type = ["cdylib", "lib"]
