[package]
name = "solcery-game"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
solana-program = "1.7.8"
solcery-vm = { path = "../vm" }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "1.3.0"
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"

[lib]
name = "solcery_game"
crate-type = ["cdylib", "lib"]
