[package]
name = "solcery-object"
version = "0.0.0"
license = "Apache-2.0"
homepage = "https://solcery.xyz/"
edition = "2021"

[dependencies]
solana-program = "1.7.8"
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.0"
solcery-crud = { path = "../crud" }
solcery-storage = { path = "../storage" }
solcery-project = { path = "../project" }
