[package]
name = "solcery-reltab"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
slice-rbtree = {path = "../slice-rbtree"}

[dev-dependencies]
pretty_assertions.workspace = true
