[package]
name = "slice-rbtree"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bitvec = "1.0.0"
borsh.workspace = true
bytemuck.workspace = true

[dev-dependencies]
#rand = {version = "0.8.5", features = ["min_const_gen"]}
criterion = "0.3"
paste = "1.0"
pretty_assertions.workspace = true

[[bench]]
name = "compare"
harness = false
