[package]
name = "slice-rbtree"
version = "0.0.0"
repository = "https://github.com/solcery/on-chain/"
edition = "2021"
readme = "README.md"
keywords = ["collection", "tree", "solana"]
categories = ["data-structures", "embedded", "no-std"]
#version.workspace = true
#license.workspace = true
#homepage.workspace = true
#edition.workspace = true

[dependencies]
#bitvec = "1.0.0"
borsh = "0.9.1"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}
#borsh.workspace = true
#bytemuck.workspace = true

[dev-dependencies]
criterion = "0.3"
paste = "1.0"
pretty_assertions = "1.3.0"
#pretty_assertions.workspace = true

[[bench]]
name = "compare"
harness = false
