[package]
name = "solcery-storage"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://solcery.xyz/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.8"
solcery-crud = { path = "../crud" }
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.0"

[lib]
name = "solcery_storage"
crate-type = ["cdylib", "lib"]
