[package]
name = "solcery-vm"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
#thiserror = "1.0.24"
borsh.workspace = true
solcery-data-types = { path = "../data-types" }

[dev-dependencies]
pretty_assertions.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
test-case = "2.2.0"
