[package]
name = "solcery-vm"
version = "0.1.0-alpha"
license = "Apache-2.0"
homepage = "https://solcery.xyz/"
edition = "2021"

[dependencies]
borsh = "0.9.1"
bytemuck = "1.7.2"
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "1.3.0"
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
test-case = "2.2.0"
