[package]
name = "solcery-impl-generator"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = {version="1.0.58", features = ["full", "visit", "parsing", "extra-traits"] }

[dev-dependencies]
slice-rbtree = { path = "../../slice-rbtree" }
solcery-reltab = { path = "../../reltab" }

[lib]
proc-macro = true
