[package]
name = "solcery-db-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
fs_test = { path = "../fs_test", features = ["arbitrary"] }
libfuzzer-sys = "0.4"
solana-program = "1.7.8"

[dependencies.solcery-db]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "db"
path = "fuzz_targets/db.rs"
test = false
doc = false
