[package]
name = "generator"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = {version="1.0.58", features = ["full", "visit", "parsing", "extra-traits"] }

[dev-dependencies]
borsh = "0.9.1"
num_enum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.8.2"

[lib]
proc-macro = true
