
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.6.6"
borsh = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
typetag = "0.1"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
