
[package]
name = "solana-bpf-brick_program"
version = "0.0.1"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.6.6"
borsh = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
typetag = "0.1"
thiserror = "1.0.24"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "brick_program"
crate-type = ["cdylib", "lib"]
